# belgian-deduce

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  build_backend.py  pyproject.toml  test.ipynb
.github/workflows/: build.yml  format.yml  test.yml
belgian_deduce/: __init__.py  _version.py  annotation_processor.py  annotator.py  base_config.json  build_cache.py  date_pseudonyms.py  deduce.py  lookup_struct_loader.py  lookup_structs.py  metadata.py  person.py  post_process.py  post_processor.py  postal_code.py  production_labels.py  redactor.py  tokenizer.py  utils.py
belgian_deduce/data/lookup/src/: __init__.py
belgian_deduce/data/lookup/src/institutions/lst_healthcare_institution/: items.txt
belgian_deduce/data/lookup/src/institutions/lst_hospital/: items.txt
belgian_deduce/data/lookup/src/institutions/lst_hospital_abbr/: items.txt
belgian_deduce/data/lookup/src/locations/lst_placename/lst_postal_locality/: items.txt
belgian_deduce/data/lookup/src/locations/lst_placename/lst_province/: items.txt
belgian_deduce/data/lookup/src/locations/lst_postal_code_locality/: items.txt
belgian_deduce/data/lookup/src/locations/lst_street/: items.txt
belgian_deduce/data/lookup/src/names/lst_first_name/: items.txt
belgian_deduce/data/lookup/src/names/lst_surname/: items.txt
belgian_deduce/str/: __init__.py
deduce/: base_config.json
deduce/data/lookup/src/institutions/lst_hospital/: items.txt
deduce/data/lookup/src/institutions/lst_hospital_abbr/: items.txt
deduce/data/lookup/src/locations/lst_placename/lst_municipality/: items.txt
deduce/data/lookup/src/locations/lst_placename/lst_region/: items.txt
deduce/data/lookup/src/locations/lst_street/: items.txt
docs/source/: index.md  links.md  migrating.md  tutorial.md
scripts/: __init__.py  extract_be_postcodes_from_wikipedia.py
tests/: conftest.py
tests/data/regression_cases/: ages.json  dates.json  emails.json  identifiers.json  institutions.json  locations.json  names.json  phone_numbers.json  urls.json
tests/pipeline/: test_deduce.py  test_post_process_parity.py
tests/regression/: test_regression.py
tests/unit/: test_annotation_processor.py  test_annotator.py  test_build_backend.py  test_date_pseudonyms.py  test_extract_be_postcodes_from_wikipedia.py  test_lookup_struct.py  test_metadata_module.py  test_post_process.py  test_post_processor.py  test_postal_code.py  test_redactor.py  test_tokenizer.py  test_utils.py
tests/unit/str/: test_str.py
