[tool.poetry]
name = "belgian-deduce"
version = "4.0.0"
packages = [{ include = "belgian_deduce" }]
description = "Rule-based de-identification for Belgian clinical text"
authors = ["Vincent Menger <vmenger@protonmail.com>", "Stig Hellemans"]
maintainers = ["Stig Hellemans"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/stighellemans/belgian-deduce/"
keywords = ["de-identification", "clinical text", "belgium", "nlp"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
]
include = [
    { path = "belgian_deduce/base_config.json", format = ["sdist", "wheel"] },
    { path = "belgian_deduce/data/lookup/cache/lookup_structs.meta.json", format = ["wheel"] },
    { path = "belgian_deduce/data/lookup/cache/lookup_structs.pickle", format = ["wheel"] },
]

[tool.sphinx]
author = "Stig Hellemans and contributors"

[tool.poetry.dependencies]
python = "^3.9"
rapidfuzz = "^3.13.0"
docdeid = "1.0.1"
regex = "^2024.11.6"
frozendict = "^2.4.6"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
beautifulsoup4 = "^4.13.5"
black = "^25.1.0"
isort = "^6.0.1"
docformatter = "^1.7.7"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
flake8-annotations = "^3.1.1"
pylint = "^3.3.7"

[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
sphinx = "^5.3.0"
myst-parser = "^0.18.1"
karma-sphinx-theme = "^0.0.8"
emoji = "^2.14.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "docdeid==1.0.1",
    "frozendict>=2.4.6,<3.0.0",
    "rapidfuzz>=3.13.0,<4.0.0",
    "regex>=2024.11.6,<2025.0.0",
]
build-backend = "build_backend"
backend-path = ["."]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
in-place = true
black = true
pre-summary-newline = true

[tool.flake8]
exclude= ['.venv']
max-line-length = 88
extend-ignore = ['E203', 'ANN101', 'ANN102', 'ANN002', 'ANN003', 'DC100']
per-file-ignores = [
    '__init__.py:F401',
    'tests/*:ANN,DC',
]

[tool.pylint]
disable = ['C0114']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=belgian_deduce --cov-fail-under=85"
